tests/pass/test_trait.tk
// Copyright (c) 2025 YiZhonghua<zhyi@dpai.com>. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
import std/io::println

shape Rect (
    w: i32,
    h: i32
)

trait @Shape {
    pub fn area(self) -> i32
}

trait @Fly {
    pub fn fly(self) -> i32 {
        return 111
    }
}

impl Rect@Shape {
    pub fn area(self) -> i32 {
        return self.w * self.h
    }
}

impl Rect@Fly {
    pub fn fly(self) -> i32 {
        return 222
    }
}

fn main() -> i32 {
    auto r = Rect(w = 10, h = 20)
    auto s = r.area()
    println("Shape Area: {}", s)
    auto f = r.fly()
    println("Fly: {}", f)
    return 0
}
