tests/fail/trait_signature.tk
// Copyright (c) 2025 YiZhonghua<zhyi@dpai.com>. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
pub trait @StrictTrait {
    pub fn must_be_pub(self)
    fn must_be_priv(self)
}

pub shape MyType(x:i32)

impl MyType@StrictTrait {
    // Mismatch: Trait says pub, Impl is private
    fn must_be_pub(self) {} // EXPECT: error[E0428]:
    
    // Mismatch: Trait says private, Impl is pub
    pub fn must_be_priv(self) {} // EXPECT: error[E0428]:
}

fn main() {}
